<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.home.yoosee.activitys.LoginActivity">

    <RelativeLayout
        android:id="@+id/layout_login_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_type_layout_height"
        android:layout_marginTop="@dimen/item_group_margin_top">

        <RadioGroup
            android:id="@+id/type_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/type_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/phone_login"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_normal" />

            <RadioButton
                android:id="@+id/type_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/email_login"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_normal" />

        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/country_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginLeft="@dimen/item_left_right_margin"
        android:layout_marginRight="@dimen/item_left_right_margin"
        android:layout_marginTop="@dimen/item_group_margin_top"
        android:background="@drawable/tiao_bg_normal">

        <TextView
            android:id="@+id/count"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="#00000000"
            android:gravity="center"
            android:maxLines="1"
            android:text="+86"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:id="@+id/separator"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/count"
            android:background="#7f7f7f" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/separator"
            android:background="#00000000"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/china"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_sign"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/globel_button_height"
                android:layout_marginLeft="@dimen/item_left_right_margin"
                android:layout_marginRight="@dimen/item_left_right_margin"
                android:layout_marginTop="@dimen/item_group_margin_top"
                android:background="@drawable/button_bg_dialog_ok"
                android:text="@string/register"
                android:textColor="@color/dialog_title"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_registe_btn_height"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/forget_pwd"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
