<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_input"
    android:layout_width="@dimen/normal_dialog_width"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:layout_marginLeft="@dimen/inner_margin_left"
        android:gravity="left|center_vertical"
        android:text="@string/delete_account"
        android:textColor="@color/dialog_title_color"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@mipmap/list_item_line" />


    <EditText
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginLeft="@dimen/inner_margin_left"
        android:layout_marginRight="@dimen/inner_margin_right"
        android:layout_marginTop="@dimen/item_group_margin_top"
        android:background="@drawable/corner_tiao_single_bg"
        android:gravity="left|center"
        android:hint="@string/inputpassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:text=""
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_normal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bottom_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button1_text"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/text_color_blue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@mipmap/btn_line" />


        <TextView
            android:id="@+id/button2_text"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_color_blue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>