<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_input"
    android:layout_width="@dimen/normal_dialog_width"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="@drawable/dialog_back"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_title_height"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/inner_margin_left"
        android:text="@string/delete_account"
        android:textColor="@color/dialog_title_color"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@mipmap/list_item_line" />

    <RelativeLayout
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_dialog_content_height"
        android:layout_marginLeft="@dimen/item_left_right_margin"
        android:layout_marginRight="@dimen/item_left_right_margin"
        android:layout_marginTop="@dimen/item_group_margin_top"
        android:background="@drawable/corner_tiao_single_bg">

        <EditText
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginLeft="@dimen/inner_margin_left"
            android:layout_marginRight="@dimen/inner_margin_right"
            android:background="#00000000"
            android:gravity="left|center_vertical"
            android:hint="@string/inputpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bottom_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/button1_text"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/change"
            android:textColor="@color/text_color_blue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@mipmap/btn_line" />

        <TextView
            android:id="@+id/button2_text"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_color_blue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>